--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 
 <head>
     <meta charset="UTF-8">
@@ -26,62 +26,7 @@
     <br>
     <div id="status" style="color: orange;"></div>
 
-    <script>
-
-        document.addEventListener('DOMContentLoaded', () => {
-            // Reference to the status element
-            const status = document.getElementById('status');
-
-            // Reference to the label element
-            const randomNumberLabel = document.getElementById('randomNumberLabel');
-
-            // Reference to the start button
-            const startButton = document.getElementById('startButton');
-
-            // The WebSocket server to connect to
-            const ws_server = 'ws://localhost:8080';
-            // The WebSocket object
-            let socket = null;
-
-            // Event listener for the Start button click
-            startButton.addEventListener('click', () => {
-                status.innerText = 'Connecting...';
-
-                // Create the WebSocket object only if it doesn't already exist
-                if (socket == null) {
-                    socket = new WebSocket(ws_server);
-                } else {
-                    status.innerText = 'Already connected';
-                }
-
-
-                socket.onerror = function (error) {
-                    console.log('WebSocket Error: ', error);
-                    status.innerText = 'Error: unable to connect to server: ' + ws_server;
-                };
-
-
-                // Open the WebSocket connection
-                socket.addEventListener('open', (event) => {
-                    status.innerText = 'Connected';
-                    console.log('WebSocket connection opened:', event);
-
-                    // Listen for messages from the server
-                    socket.addEventListener('message', (event) => {
-                        // Update the label with the received random number
-                        randomNumberLabel.textContent = `Random Number: ${event.data}`;
-                    });
-                });
-
-
-
-                // Handle the connection being closed
-                socket.addEventListener('close', (event) => {
-                    console.log('WebSocket connection closed:', event);
-                });
-            });
-        });
-    </script>
+    <script type="module" src="websocket.js"></script>
 
 </body>
 
